Filtros busqueda y cambios para opinion interfaz